boltffi_backend/tests/snapshots/swift__swift_target_renders_direct_records_and_c_style_enums.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/direct_records_and_c_style_enums\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

/// A two-dimensional point.
public struct Point: Hashable, Equatable, Sendable {
    /// The horizontal coordinate.
    public var x: Int32
    /// The vertical coordinate.
    public var y: Int32

    public init(x: Int32, y: Int32) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }
}

/// How fast the operation should run.
public enum Mode: UInt8, Hashable, Sendable, CaseIterable {
    /// Prioritize speed.
    case fast = 1
    /// Prioritize patience.
    case slow = 2

    @usableFromInline init(fromC c: UInt8) {
        self = Mode(rawValue: c)!
    }

    @usableFromInline var cValue: UInt8 {
        rawValue
    }
}

/// Returns the point unchanged.
public func echoPoint(point: Point) -> Point {
    return Point(fromC: boltffi_function_demo_echo_point(point.cValue))
}

/// Returns the mode unchanged.
public func echoMode(mode: Mode) -> Mode {
    return Mode(fromC: boltffi_function_demo_echo_mode(mode.cValue))
}
