boltffi_backend/tests/snapshots/swift__swift_target_renders_direct_vector_closure_parameters.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/direct_vector_closure_parameter\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

private final class BoltFFIClosureBox<Invoke> {
    let invoke: Invoke

    init(_ invoke: Invoke) {
        self.invoke = invoke
    }
}

public func install(callback: @escaping ([UInt32]) -> UInt32) {
    let boltffiCallbackBox = BoltFFIClosureBox<([UInt32]) -> UInt32>(callback)
    let boltffiCallbackContext = Unmanaged.passRetained(boltffiCallbackBox).toOpaque()
    let boltffiCallbackCall: @convention(c) (UnsafeMutableRawPointer?, UnsafePointer<UInt32>?, UInt) -> UInt32 = { context, arg0_ptr, arg0_len in
        let arg0_count = Int(arg0_len)
        let arg0_value = arg0_count == 0 ? [] : Array(UnsafeBufferPointer(start: arg0_ptr!, count: arg0_count))
        return Unmanaged<BoltFFIClosureBox<([UInt32]) -> UInt32>>.fromOpaque(context!).takeUnretainedValue().invoke(arg0_value)
    }
    let boltffiCallbackRelease: @convention(c) (UnsafeMutableRawPointer?) -> Void = { context in
        guard let context = context else { return }
        Unmanaged<BoltFFIClosureBox<([UInt32]) -> UInt32>>.fromOpaque(context).release()
    }
    boltffi_function_demo_install(boltffiCallbackCall, boltffiCallbackContext, boltffiCallbackRelease)
}
