boltffi_backend/tests/snapshots/swift__swift_target_renders_documented_record_and_enum_methods.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"associated/direct_record_and_enum_callables\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

/// A point on a two-dimensional plane.
public struct Point: Hashable, Equatable, Sendable {
    /// The horizontal coordinate.
    public var x: Double
    /// The vertical coordinate.
    public var y: Double

    public init(x: Double, y: Double) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }

    /// Returns the origin point.
    public static func origin() -> Point {
        return Point(fromC: boltffi_init_record_demo_point_origin())
    }

    /// Returns the horizontal distance from another point.
    public func distance(other: Point) -> Double {
        return boltffi_method_record_demo_point_distance(self.cValue, other.cValue)
    }
}

/// A mode selected by the caller.
public enum Mode: UInt8, Hashable, Sendable, CaseIterable {
    /// Favor fast work.
    case fast = 1
    /// Favor careful work.
    case slow = 2

    @usableFromInline init(fromC c: UInt8) {
        self = Mode(rawValue: c)!
    }

    @usableFromInline var cValue: UInt8 {
        rawValue
    }

    /// Returns the default mode.
    public static func `default`() -> Mode {
        return Mode(fromC: boltffi_init_enum_demo_mode_default())
    }

    /// Returns the wire code for this mode.
    public func code() -> UInt8 {
        return boltffi_method_enum_demo_mode_code(self.cValue)
    }
}
