boltffi_backend/tests/snapshots/swift__swift_target_renders_encoded_closure_return_shapes.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/encoded_closure_return_shapes\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

private final class BoltFFIClosureBox<Invoke> {
    let invoke: Invoke

    init(_ invoke: Invoke) {
        self.invoke = invoke
    }
}

public func installVec(callback: @escaping () -> [UInt32]) {
    let boltffiCallbackBox = BoltFFIClosureBox<() -> [UInt32]>(callback)
    let boltffiCallbackContext = Unmanaged.passRetained(boltffiCallbackBox).toOpaque()
    let boltffiCallbackCall: @convention(c) (UnsafeMutableRawPointer?) -> FfiBuf_u8 = { context in
        let boltffiResult = Unmanaged<BoltFFIClosureBox<() -> [UInt32]>>.fromOpaque(context!).takeUnretainedValue().invoke()
        return boltffiResult.withUnsafeBufferPointer { boltffiResultBuffer in
            return boltffi_buf_from_bytes(UnsafeRawPointer(boltffiResultBuffer.baseAddress)?.assumingMemoryBound(to: UInt8.self), UInt(boltffiResultBuffer.count * MemoryLayout<UInt32>.stride))
        }
    }
    let boltffiCallbackRelease: @convention(c) (UnsafeMutableRawPointer?) -> Void = { context in
        guard let context = context else { return }
        Unmanaged<BoltFFIClosureBox<() -> [UInt32]>>.fromOpaque(context).release()
    }
    boltffi_function_demo_install_vec(boltffiCallbackCall, boltffiCallbackContext, boltffiCallbackRelease)
}

public func installOption(callback: @escaping () -> Int32?) {
    let boltffiCallbackBox = BoltFFIClosureBox<() -> Int32?>(callback)
    let boltffiCallbackContext = Unmanaged.passRetained(boltffiCallbackBox).toOpaque()
    let boltffiCallbackCall: @convention(c) (UnsafeMutableRawPointer?) -> FfiBuf_u8 = { context in
        let boltffiClosureResult = Unmanaged<BoltFFIClosureBox<() -> Int32?>>.fromOpaque(context!).takeUnretainedValue().invoke()
        let boltffiClosureResultBytes = boltffiEncode { boltffiClosureResultWriter in boltffiClosureResultWriter.writeOptional(boltffiClosureResult) { writer, value in writer.writeI32(value) } }
        return boltffiClosureResultBytes.withUnsafeBufferPointer { boltffiClosureResultBuffer in
            boltffi_buf_from_bytes(boltffiClosureResultBuffer.baseAddress, UInt(boltffiClosureResultBuffer.count))
        }
    }
    let boltffiCallbackRelease: @convention(c) (UnsafeMutableRawPointer?) -> Void = { context in
        guard let context = context else { return }
        Unmanaged<BoltFFIClosureBox<() -> Int32?>>.fromOpaque(context).release()
    }
    boltffi_function_demo_install_option(boltffiCallbackCall, boltffiCallbackContext, boltffiCallbackRelease)
}
