boltffi_backend/tests/snapshots/swift__swift_target_renders_encoded_function_stack.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_source(SourceFixture::many([\"records/person\", \"enums/shape\",\n\"enums/message\", \"exports/encoded_functions\",]))"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Person: Hashable, Equatable, Sendable {
    public var name: String
    public var `repeat`: String

    public init(name: String, `repeat`: String) {
        self.name = name
        self.`repeat` = `repeat`
    }

    @inlinable static func decode(from reader: inout WireReader) -> Person {
        Person(name: reader.readString(), repeat: reader.readString())
    }

    @inlinable func encode(to writer: inout WireWriter) {
        writer.writeString(self.name)
        writer.writeString(self.`repeat`)
    }
}

public enum Shape: Hashable, Equatable, Sendable {
    case label(String)

    @inlinable static func decode(from reader: inout WireReader) -> Shape {
        let tag = reader.readU32()
        switch tag {
        case 0:
            return .label(reader.readString())
        default:
            fatalError("Invalid Shape tag: \(tag)")
        }
    }

    @inlinable func encode(to writer: inout WireWriter) {
        switch self {
        case let .label(field0):
            writer.writeU32(0)
            writer.writeString(field0)
        }
    }
}

public enum Message: Hashable, Equatable, Sendable {
    case empty
    case text(String)
    case named(name: String)

    @inlinable static func decode(from reader: inout WireReader) -> Message {
        let tag = reader.readU32()
        switch tag {
        case 0:
            return .empty
        case 1:
            return .text(reader.readString())
        case 2:
            return .named(name: reader.readString())
        default:
            fatalError("Invalid Message tag: \(tag)")
        }
    }

    @inlinable func encode(to writer: inout WireWriter) {
        switch self {
        case .empty:
            writer.writeU32(0)
        case let .text(field0):
            writer.writeU32(1)
            writer.writeString(field0)
        case let .named(name):
            writer.writeU32(2)
            writer.writeString(name)
        }
    }
}

public func echoBytes(bytes: Data) -> Data {
    let boltffiBytesBytes = boltffiEncode { boltffiBytesWriter in boltffiBytesWriter.writeBytes(bytes) }
    return boltffiBytesBytes.withUnsafeBufferPointer { boltffiBytesBuffer in
        let boltffiResult = boltffi_function_demo_echo_bytes(boltffiBytesBuffer.baseAddress!, UInt(boltffiBytesBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readBytes() }
    }
}

public func keepPerson(person: Person) -> Person {
    let boltffiPersonBytes = boltffiEncode { boltffiPersonWriter in person.encode(to: &boltffiPersonWriter) }
    return boltffiPersonBytes.withUnsafeBufferPointer { boltffiPersonBuffer in
        let boltffiResult = boltffi_function_demo_keep_person(boltffiPersonBuffer.baseAddress!, UInt(boltffiPersonBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in Person.decode(from: &boltffiReader) }
    }
}

public func keepShape(shape: Shape) -> Shape {
    let boltffiShapeBytes = boltffiEncode { boltffiShapeWriter in shape.encode(to: &boltffiShapeWriter) }
    return boltffiShapeBytes.withUnsafeBufferPointer { boltffiShapeBuffer in
        let boltffiResult = boltffi_function_demo_keep_shape(boltffiShapeBuffer.baseAddress!, UInt(boltffiShapeBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in Shape.decode(from: &boltffiReader) }
    }
}

public func echoMessage(message: Message) -> Message {
    let boltffiMessageBytes = boltffiEncode { boltffiMessageWriter in message.encode(to: &boltffiMessageWriter) }
    return boltffiMessageBytes.withUnsafeBufferPointer { boltffiMessageBuffer in
        let boltffiResult = boltffi_function_demo_echo_message(boltffiMessageBuffer.baseAddress!, UInt(boltffiMessageBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in Message.decode(from: &boltffiReader) }
    }
}
