boltffi_backend/tests/snapshots/swift__swift_target_renders_fallible_functions_as_throwing_functions.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/fallible_returns\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Point: Hashable, Equatable, Sendable {
    public var x: Int32
    public var y: Int32

    public init(x: Int32, y: Int32) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }
}

public enum MathError: Int32, Hashable, Sendable, CaseIterable, Error {
    case invalidInput = 0

    @usableFromInline init(fromC c: Int32) {
        self = MathError(rawValue: c)!
    }

    @usableFromInline var cValue: Int32 {
        rawValue
    }
}

public func checkedAdd(left: Int32, right: Int32) throws -> Int32 {
    var boltffiResult: Int32 = Int32()
    let boltffiError = boltffi_function_demo_checked_add(left, right, &boltffiResult)
    if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
        defer { boltffi_free_buf(boltffiError) }
        throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in MathError(rawValue: boltffiErrorReader.readI32())! }
    }
    return boltffiResult
}

public func parsePoint(text: String) throws -> Point {
    let boltffiTextBytes = boltffiEncode { boltffiTextWriter in boltffiTextWriter.writeString(text) }
    return try boltffiTextBytes.withUnsafeBufferPointer { boltffiTextBuffer in
        var boltffiResult: ___Point = ___Point()
        let boltffiError = boltffi_function_demo_parse_point(boltffiTextBuffer.baseAddress!, UInt(boltffiTextBuffer.count), &boltffiResult)
        if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
            defer { boltffi_free_buf(boltffiError) }
            throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in MathError(rawValue: boltffiErrorReader.readI32())! }
        }
        return Point(fromC: boltffiResult)
    }
}

public func validateName(name: String) throws -> String {
    let boltffiNameBytes = boltffiEncode { boltffiNameWriter in boltffiNameWriter.writeString(name) }
    return try boltffiNameBytes.withUnsafeBufferPointer { boltffiNameBuffer in
        var boltffiResult: FfiBuf_u8 = FfiBuf_u8()
        let boltffiError = boltffi_function_demo_validate_name(boltffiNameBuffer.baseAddress!, UInt(boltffiNameBuffer.count), &boltffiResult)
        if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
            defer { boltffi_free_buf(boltffiError) }
            throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in MathError(rawValue: boltffiErrorReader.readI32())! }
        }
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readString() }
    }
}

public func storeName(name: String) throws {
    let boltffiNameBytes = boltffiEncode { boltffiNameWriter in boltffiNameWriter.writeString(name) }
    try boltffiNameBytes.withUnsafeBufferPointer { boltffiNameBuffer -> Void in
        let boltffiError = boltffi_function_demo_store_name(boltffiNameBuffer.baseAddress!, UInt(boltffiNameBuffer.count))
        if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
            defer { boltffi_free_buf(boltffiError) }
            throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in MathError(rawValue: boltffiErrorReader.readI32())! }
        }
    }
}
