boltffi_backend/tests/snapshots/swift__swift_target_renders_fallible_streams.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"stream/fallible\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public enum JobError: Hashable, Equatable, Sendable, Error {
    case refused(code: UInt32)
    case lost

    @inlinable static func decode(from reader: inout WireReader) -> JobError {
        let tag = reader.readU32()
        switch tag {
        case 0:
            return .refused(code: reader.readU32())
        case 1:
            return .lost
        default:
            fatalError("Invalid JobError tag: \(tag)")
        }
    }

    @inlinable func encode(to writer: inout WireWriter) {
        switch self {
        case let .refused(code):
            writer.writeU32(0)
            writer.writeU32(code)
        case .lost:
            writer.writeU32(1)
        }
    }
}

public final class Jobs {
    private var __boltffiHandle: UInt64 = 0

    @usableFromInline var handle: UInt64 {
        get { withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_load($0)) } }
        set { __boltffiHandle = UInt64(newValue) }
    }

    @usableFromInline init(handle: UInt64) {
        self.handle = handle
    }

    @usableFromInline func __boltffiTakeHandle() -> UInt64 {
        withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_exchange($0, 0)) }
    }

    deinit {
        let handle = __boltffiTakeHandle()
        if handle != 0 { boltffi_release_class_demo_jobs(handle) }
    }
}


extension Jobs {
    public func lines() -> _Concurrency.AsyncThrowingStream<String, Swift.Error> {
        _Concurrency.AsyncThrowingStream<String, Swift.Error>(bufferingPolicy: .unbounded) { continuation in
            let boltffiSubscription = boltffi_stream_demo_jobs_lines_subscribe(self.handle)
            guard boltffiSubscription != 0 else {
                continuation.finish()
                return
            }
            let context = BoltFFIStreamContext<String>(
                subscription: boltffiSubscription,
                batchSize: 16,
                readBatch: { subscription, batchSize in
                    return boltffiReadWireStreamBatch(
                        subscription: subscription,
                        batchSize: batchSize,
                        popBatch: boltffi_stream_demo_jobs_lines_pop_batch,
                        freeBuf: boltffi_free_buf
                    ) { reader in
                        let boltffiStreamCount = Int(reader.readU32())
                        var boltffiStreamBatch = [String]()
                        boltffiStreamBatch.reserveCapacity(boltffiStreamCount)
                        for _ in 0..<boltffiStreamCount {
                            boltffiStreamBatch.append(reader.readString())
                        }
                        return boltffiStreamBatch
                    }
                },
                poll: boltffi_stream_demo_jobs_lines_poll,
                unsubscribe: boltffi_stream_demo_jobs_lines_unsubscribe,
                free: boltffi_stream_demo_jobs_lines_free,
                atomicCompareExchange: boltffi_atomic_u8_cas,
                yieldItem: { item in _ = continuation.yield(item) },
                finish: { continuation.finish() },
                fail: { failure in continuation.finish(throwing: failure) },
                takeFailure: { subscription in
                    let buffer = boltffi_stream_demo_jobs_lines_take_error(subscription)
                    defer { boltffi_free_buf(buffer) }
                    guard buffer.len > 0, let pointer = buffer.ptr else {
                        return nil
                    }
                    var boltffiErrorReader = WireReader(ptr: pointer, len: Int(buffer.len))
                    return FfiError(message: boltffiErrorReader.readString())
                }
            )
            continuation.onTermination = { @Sendable _ in context.requestTermination() }
            context.start()
        }
    }
}


extension Jobs {
    public func progress() -> ProgressSubscription {
        let boltffiSubscription = boltffi_stream_demo_jobs_progress_subscribe(self.handle)
        return ProgressSubscription(
            handle: boltffiSubscription,
            readBatch: { subscription, batchSize in
                return boltffiReadDirectStreamBatch(
                    subscription: subscription,
                    batchSize: batchSize,
                    popBatch: boltffi_stream_demo_jobs_progress_pop_batch
                ) { (rawItems: UnsafeBufferPointer<Int32>) in
                    var boltffiStreamBatch = [Int32]()
                    boltffiStreamBatch.reserveCapacity(rawItems.count)
                    for rawItem in rawItems {
                        boltffiStreamBatch.append(rawItem)
                    }
                    return boltffiStreamBatch
                }
            },
            wait: boltffi_stream_demo_jobs_progress_wait,
            unsubscribe: boltffi_stream_demo_jobs_progress_unsubscribe,
            free: boltffi_stream_demo_jobs_progress_free,
            takeFailure: { subscription in
                let buffer = boltffi_stream_demo_jobs_progress_take_error(subscription)
                defer { boltffi_free_buf(buffer) }
                guard buffer.len > 0, let pointer = buffer.ptr else {
                    return nil
                }
                var boltffiErrorReader = WireReader(ptr: pointer, len: Int(buffer.len))
                return JobError.decode(from: &boltffiErrorReader)
            }
        )
    }
}

public final class ProgressSubscription {
    private let handle: UInt64
    private let readBatch: (UInt64, UInt) -> [Int32]
    private let wait: (UInt64, UInt32) -> Int32
    private let unsubscribeCall: (UInt64) -> Void
    private let free: (UInt64) -> Void
    private let takeFailure: (UInt64) -> Swift.Error?
    private var failure: Swift.Error?
    private var closed = false

    @usableFromInline init(
        handle: UInt64,
        readBatch: @escaping (UInt64, UInt) -> [Int32],
        wait: @escaping (UInt64, UInt32) -> Int32,
        unsubscribe: @escaping (UInt64) -> Void,
        free: @escaping (UInt64) -> Void,
        takeFailure: @escaping (UInt64) -> Swift.Error?
    ) {
        self.handle = handle
        self.readBatch = readBatch
        self.wait = wait
        self.unsubscribeCall = unsubscribe
        self.free = free
        self.takeFailure = takeFailure
    }

    deinit {
        if handle != 0 {
            free(handle)
        }
    }

    public func popBatch(maxCount: UInt = 16) throws -> [Int32] {
        if handle == 0 {
            return []
        }
        // closed before this pop, so nothing can arrive after it: an empty pop is final
        let ended = failure != nil || wait(handle, 0) < 0
        let items = readBatch(handle, maxCount)
        if items.isEmpty && ended {
            if failure == nil {
                failure = takeFailure(handle)
            }
            if let failure {
                throw failure
            }
        }
        return items
    }

    public func wait(timeout: UInt32) -> Int32 {
        if handle == 0 {
            return -1
        }
        return wait(handle, timeout)
    }

    public func unsubscribe() {
        if handle == 0 || closed {
            return
        }
        closed = true
        unsubscribeCall(handle)
    }
}


extension Jobs {
    public func ticks(onError: @escaping (Swift.Error) -> Void, callback: @escaping (Int32) -> Void) -> TicksCancellable {
        let boltffiSubscription = boltffi_stream_demo_jobs_ticks_subscribe(self.handle)
        if boltffiSubscription == 0 {
            return TicksCancellable {}
        }
        let context = BoltFFIStreamContext<Int32>(
            subscription: boltffiSubscription,
            batchSize: 16,
            readBatch: { subscription, batchSize in
                return boltffiReadDirectStreamBatch(
                    subscription: subscription,
                    batchSize: batchSize,
                    popBatch: boltffi_stream_demo_jobs_ticks_pop_batch
                ) { (rawItems: UnsafeBufferPointer<Int32>) in
                    var boltffiStreamBatch = [Int32]()
                    boltffiStreamBatch.reserveCapacity(rawItems.count)
                    for rawItem in rawItems {
                        boltffiStreamBatch.append(rawItem)
                    }
                    return boltffiStreamBatch
                }
            },
            poll: boltffi_stream_demo_jobs_ticks_poll,
            unsubscribe: boltffi_stream_demo_jobs_ticks_unsubscribe,
            free: boltffi_stream_demo_jobs_ticks_free,
            atomicCompareExchange: boltffi_atomic_u8_cas,
            yieldItem: callback,
            finish: {},
            fail: onError,
            takeFailure: { subscription in
                let buffer = boltffi_stream_demo_jobs_ticks_take_error(subscription)
                defer { boltffi_free_buf(buffer) }
                guard buffer.len > 0, let pointer = buffer.ptr else {
                    return nil
                }
                var boltffiErrorReader = WireReader(ptr: pointer, len: Int(buffer.len))
                return FfiError(message: boltffiErrorReader.readString())
            }
        )
        context.start()
        return TicksCancellable { context.requestTermination() }
    }
}

public final class TicksCancellable {
    private let cancelAction: () -> Void
    private var cancelled = false

    @usableFromInline init(_ cancelAction: @escaping () -> Void = {}) {
        self.cancelAction = cancelAction
    }

    deinit {
        cancel()
    }

    public func cancel() {
        if cancelled {
            return
        }
        cancelled = true
        cancelAction()
    }
}

private enum BoltFFIStreamPollResult: Int8 {
    case ready = 0
    case closed = 1
}

@inline(__always)
