boltffi_backend/tests/snapshots/swift__swift_target_renders_maps_through_shared_codec.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/map_functions\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func keepScores(scores: [String: Int32]) -> [String: Int32] {
    let boltffiScoresBytes = boltffiEncode { boltffiScoresWriter in boltffiScoresWriter.writeMap(scores, { boltffiScoresWriter, boltffiValue0 in boltffiScoresWriter.writeString(boltffiValue0) }, { boltffiScoresWriter, boltffiValue1 in boltffiScoresWriter.writeI32(boltffiValue1) }) }
    return boltffiScoresBytes.withUnsafeBufferPointer { boltffiScoresBuffer in
        let boltffiResult = boltffi_function_demo_keep_scores(boltffiScoresBuffer.baseAddress!, UInt(boltffiScoresBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readMap({ boltffiReader in boltffiReader.readString() }, { boltffiReader in boltffiReader.readI32() }) }
    }
}

public func keepScoreHistory(history: [String: [Int32]]) -> [String: [Int32]] {
    let boltffiHistoryBytes = boltffiEncode { boltffiHistoryWriter in boltffiHistoryWriter.writeMap(history, { boltffiHistoryWriter, boltffiValue0 in boltffiHistoryWriter.writeString(boltffiValue0) }, { boltffiHistoryWriter, boltffiValue1 in boltffiHistoryWriter.writeArray(boltffiValue1) { boltffiHistoryWriter, boltffiValue2 in boltffiHistoryWriter.writeI32(boltffiValue2) } }) }
    return boltffiHistoryBytes.withUnsafeBufferPointer { boltffiHistoryBuffer in
        let boltffiResult = boltffi_function_demo_keep_score_history(boltffiHistoryBuffer.baseAddress!, UInt(boltffiHistoryBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readMap({ boltffiReader in boltffiReader.readString() }, { boltffiReader in boltffiReader.readArray { boltffiReader in boltffiReader.readI32() } }) }
    }
}
