boltffi_backend/tests/snapshots/swift__swift_target_renders_native_opaque_records.snap
---
source: boltffi_backend/tests/swift.rs
expression: rendered
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}


public struct Snapshot: Sendable {
    private final class NativeStorage: @unchecked Sendable {
        let handle: UnsafeMutableRawPointer
        init(handle: UnsafeMutableRawPointer) { self.handle = handle }
        deinit { boltffi_record_native_snapshot_drop(handle) }
    }
    private let storage: NativeStorage
    @usableFromInline init(nativeHandle: UnsafeMutableRawPointer) {
        self.storage = NativeStorage(handle: nativeHandle)
    }
    public var count: UInt32 {
        return withExtendedLifetime(storage) { storage in
        return boltffi_record_native_snapshot_get_count(UnsafeRawPointer(storage.handle))
        }
    }
    public var title: String {
        return withExtendedLifetime(storage) { storage in
        var ptr: UnsafePointer<UInt8>? = nil
        var len: UInt = 0
        guard boltffi_record_native_snapshot_borrow_title(UnsafeRawPointer(storage.handle), &ptr, &len) != 0 else {
            preconditionFailure("native opaque borrow failed for title")
        }
        if len == 0 { return "" }
        guard let ptr else {
            preconditionFailure("native opaque title: nil pointer with non-zero length")
        }
        guard len <= UInt(Int.max) else {
            preconditionFailure("native opaque title length overflows Int")
        }
        guard let str = String(bytes: UnsafeBufferPointer(start: ptr, count: Int(len)), encoding: .utf8) else {
            preconditionFailure("native opaque title field is not valid UTF-8")
        }
        return str
        }
    }
    public var payload: Data {
        return withExtendedLifetime(storage) { storage in
        var ptr: UnsafePointer<UInt8>? = nil
        var len: UInt = 0
        guard boltffi_record_native_snapshot_borrow_payload(UnsafeRawPointer(storage.handle), &ptr, &len) != 0 else {
            preconditionFailure("native opaque borrow failed for payload")
        }
        if len == 0 { return Data() }
        guard let ptr else {
            preconditionFailure("native opaque payload: nil pointer with non-zero length")
        }
        guard len <= UInt(Int.max) else {
            preconditionFailure("native opaque payload length overflows Int")
        }
        return Data(bytes: ptr, count: Int(len))
        }
    }
    public var score: Double? {
        return withExtendedLifetime(storage) { storage in
        guard boltffi_record_native_snapshot_has_score(UnsafeRawPointer(storage.handle)) != 0 else { return nil }
        return boltffi_record_native_snapshot_get_score(UnsafeRawPointer(storage.handle))
        }
    }
    public var label: String? {
        return withExtendedLifetime(storage) { storage in
        guard boltffi_record_native_snapshot_has_label(UnsafeRawPointer(storage.handle)) != 0 else { return nil }
        var ptr: UnsafePointer<UInt8>? = nil
        var len: UInt = 0
        guard boltffi_record_native_snapshot_borrow_label(UnsafeRawPointer(storage.handle), &ptr, &len) != 0 else {
            preconditionFailure("native opaque borrow failed for label")
        }
        if len == 0 { return "" }
        guard let ptr else {
            preconditionFailure("native opaque label: nil pointer with non-zero length")
        }
        guard len <= UInt(Int.max) else {
            preconditionFailure("native opaque label length overflows Int")
        }
        guard let str = String(bytes: UnsafeBufferPointer(start: ptr, count: Int(len)), encoding: .utf8) else {
            preconditionFailure("native opaque label field is not valid UTF-8")
        }
        return str
        }
    }
}

public func makeSnapshot(input: Data, count: UInt32) -> Snapshot {
    return input.withUnsafeBytes { boltffiInputRaw in
        return Snapshot(nativeHandle: boltffi_function_demo_make_snapshot(boltffiInputRaw.baseAddress?.assumingMemoryBound(to: UInt8.self), UInt(boltffiInputRaw.count), count)!)
    }
}
