boltffi_backend/tests/snapshots/swift__swift_target_renders_nullable_primitive_function_stack.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/nullable_primitive_functions\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func maybeAdd(value: Int32?) -> UInt32? {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeOptional(value) { writer, value in writer.writeI32(value) } }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        let boltffiResult = boltffi_function_demo_maybe_add(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readOptional { reader in reader.readU32() } }
    }
}
